# SFML-GUI

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: Error.hpp  GUI.hpp  GUIBase.hpp  GUIBox.hpp  GUIBoxDrag.hpp  GUIButton.hpp  GUIContextMenu.hpp  GUIDrag.hpp  GUITextbox.hpp  GUITextboxDrag.hpp  SDLManager.hpp
src/: GUIBase.cpp  main.cpp
