CMAKE_MINIMUM_REQUIRED(VERSION 3.7)

#SET(CMAKE_CXX_STANDARD 11)

PROJECT(sfmlgui)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_BUILD_TYPE DEBUG)

SET(SOURCE_FILES
    src/main.cpp)

ADD_EXECUTABLE(sfmlgui ${SOURCE_FILES})

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)

#FIND_PACKAGE(SFML REQUIRED audio network graphics window system)
FIND_PACKAGE(SFML REQUIRED graphics window system)

INCLUDE_DIRECTORIES(include ${SFML_INCLUDE_DIR})
#INCLUDE_DIRECTORIES(~/Program-Arguments)

TARGET_LINK_LIBRARIES(sfmlgui ${SFML_LIBRARIES})

