CMAKE_MINIMUM_REQUIRED(VERSION 3.7)

#SET(CMAKE_CXX_STANDARD 11)

PROJECT(sfmlgui VERSION 1.0.0 DESCRIPTION "sfmlgui")

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_BUILD_TYPE DEBUG)

SET(SOURCE_FILES
    src/main.cpp
    src/GUIBase.cpp)

ADD_EXECUTABLE(sfmlgui ${SOURCE_FILES})
#ADD_LIBRARY(sfmlguilib SHARED src/GUIBase.cpp)

#SET_TARGET_PROPERTIES(sfmlguilib PROPERTIES VERSION ${PROJECT_VERSION})
#SET_TARGET_PROPERTIES(sfmlguilib PROPERTIES SOVERSION 1)
#SET_TARGET_PROPERTIES(sfmlguilib PROPERTIES PUBLIC_HEADER include/GUI.hpp)
#TARGET_INCLUDE_DIRECTORIES(sfmlguilib PRIVATE include)
#TARGET_INCLUDE_DIRECTORIES(sfmlguilib PRIVATE src)

#INCLUDE(GUIInstallDirs)
#INSTALL(TARGETS sfmlguilib LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
#        PUBLIC_HEADER DESINTATION ${CMAKE_INSTALL_INCLUDEDIR})

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)

#FIND_PACKAGE(SFML REQUIRED audio network graphics window system)
FIND_PACKAGE(SFML REQUIRED graphics window system)

INCLUDE_DIRECTORIES(include ${SFML_INCLUDE_DIR})
#INCLUDE_DIRECTORIES(~/Program-Arguments)

TARGET_LINK_LIBRARIES(sfmlgui ${SFML_LIBRARIES})

